Update vag-setup.sh
changes done for the maven repo